--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
   --main-margin-bottom: 50px;
   --title-margin-main: 10px;
   --main-margin-right: 30px;
+  --main-transition-settings: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Global settings */
@@ -147,6 +148,23 @@ ul {
   font-weight: var(--font-weight-second);
   line-height: 1.14;
   letter-spacing: 0.02em;
+  transition: color var(--main-transition-settings);
+}
+
+.header__link--current {
+  position: relative;
+}
+
+.header__link--current::after {
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-text-color);
+  border-radius: 2px;
 }
 
 .header-contact-list {
@@ -207,6 +225,7 @@ ul {
 }
 
 .hero__btn {
+  position: relative;
   border: inherit;
   padding: 10px 32px;
   border-radius: 4px;
@@ -219,14 +238,83 @@ ul {
   letter-spacing: var(--letter-spacing-second);
   text-align: center;
   min-width: 200px;
-  position: relative;
+
+  transition: transform var(--main-transition-settings);
   transition-duration: 350ms;
 }
 
 .hero__btn:hover,
 .hero__btn:focus {
-  /* border: 1px solid var(--accent-text-color); */
   transform: scale(1.05);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity var(--main-transition-settings);
+}
+
+.backdrop--is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop--is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.7);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.2);
+  background-color: #ffffff;
+  min-width: 528px;
+  min-height: 581px;
+  color: #000000;
+  padding: 15px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform var(--main-transition-settings);
+}
+
+.close-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  margin-top: 8px;
+  margin-right: 8px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color var(--main-transition-settings), fill var(--main-transition-settings),
+    box-shadow var(--main-transition-settings);
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  background-color: var(--accent-text-color);
+  fill: var(--white-text-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.modal-close-icon {
+  width: 16px;
+  height: 16px;
 }
 
 /* Benefits section */
@@ -295,8 +383,40 @@ ul {
   display: flex;
 }
 
+.about__item {
+  position: relative;
+  overflow: hidden;
+}
+
 .about__item:not(:last-child) {
   margin-right: var(--main-margin-right);
+}
+
+.about-list--tumb {
+  position: absolute;
+  bottom: -50px;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(47, 48, 58, 0.8);
+  width: 370px;
+  height: 120px;
+  transition: transform var(--main-transition-settings);
+}
+
+.about__list--title {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--white-text-color);
+  margin-bottom: 50px;
+}
+
+.about__item:hover .about-list--tumb,
+.about__item:focus .about-list--tumb {
+  transform: translateY(-50px);
 }
 
 /* Team section */
@@ -359,12 +479,14 @@ ul {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+  transition: background-color var(--main-transition-settings);
 }
 
 .media-icon {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+  transition: fill var(--main-transition-settings);
 }
 
 .team-media-link:hover,
@@ -375,6 +497,53 @@ ul {
 .team-media-link:hover .media-icon,
 .team-media-link:focus .media-icon {
   fill: #ffffff;
+}
+
+.team__scene {
+  width: 270px;
+  height: 260px;
+  perspective: 600px;
+  overflow: hidden;
+}
+
+.team__card {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.team__cadr-face {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  backface-visibility: hidden;
+}
+
+.team__card-face--back {
+  background-color: #f1f0f0;
+  transform: rotateY(180deg);
+  padding: 15px;
+}
+
+.team__cadr-face--back-title {
+  align-items: center;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+
+  font-weight: var(--font-weight-second);
+  font-size: 16px;
+  text-align: center;
+}
+
+.team__cadr-face--back-text {
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.team__scene:hover .team__card {
+  transform: rotateY(180deg);
 }
 
 /* Clients section */
@@ -400,6 +569,7 @@ ul {
   height: 90px;
   justify-content: center;
   align-items: center;
+  transition: border-color var(--main-transition-settings);
 }
 
 .clients-link:hover,
@@ -416,6 +586,7 @@ ul {
   width: 106px;
   height: 60px;
   fill: #afb1b8;
+  transition: fill var(--main-transition-settings);
 }
 
 /* Porfolio page */
@@ -442,6 +613,8 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
+  transition: background-color var(--main-transition-settings),
+    color var(--main-transition-settings), box-shadow var(--main-transition-settings);
 }
 
 .works__btn:hover,
@@ -467,9 +640,13 @@ ul {
   border: 1px solid #eeeeee;
 }
 
+.works-examples__link {
+  display: block;
+  transition: box-shadow var(--main-transition-settings);
+}
+
 .works-examples__link:hover,
 .works-examples__link:focus {
-  display: block;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -495,6 +672,36 @@ ul {
   padding-right: 24px;
 }
 
+.works-examples__tumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.works-examples__link:hover .work-examples__overlay {
+  transform: translateY(0);
+}
+
+.work-examples__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(101%);
+  transition: transform var(--main-transition-settings);
+}
+
+.work-examples__overlay-text {
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--white-text-color);
+  padding-top: 63px;
+  padding-bottom: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
 /* Footer */
 
 .footer {
@@ -506,6 +713,10 @@ ul {
 .footer-logo {
   margin-bottom: 20px;
   color: var(--white-text-color);
+}
+
+.footer__link {
+  transition: color var(--main-transition-settings);
 }
 
 .footer__link--map {
@@ -556,6 +767,7 @@ ul {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+  transition: background-color var(--main-transition-settings);
 }
 
 .footer-media-item + .footer-media-item {
