--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,11 @@
 }
 
 /* Global settings */
+/* Временно до добавления JS */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--main-text-color);
@@ -131,6 +136,48 @@ ul {
   padding-bottom: 25px;
 }
 
+@keyframes heartBeat {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+
+  6% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+
+  12% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+
+  18% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+
+  24% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.animate__heartBeat {
+  -webkit-animation-name: heartBeat;
+  animation-name: heartBeat;
+  -webkit-animation-duration: 10000ms;
+  animation-duration: 5000ms;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+
 .logo__word,
 .header__link--current,
 .header__link:hover,
@@ -151,7 +198,8 @@ ul {
   transition: color var(--main-transition-settings);
 }
 
-.header__link--current {
+.header__link--current,
+.hover-effect__link {
   position: relative;
 }
 
@@ -165,6 +213,24 @@ ul {
   height: 4px;
   background-color: var(--accent-text-color);
   border-radius: 2px;
+}
+
+.hover-effect__link::after {
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  content: '';
+  display: block;
+  width: 0%;
+  height: 2px;
+  background-color: var(--accent-text-color);
+  border-radius: 2px;
+  transition: width 0.5s, left 0.5s;
+}
+
+.hover-effect__link:hover::after {
+  width: 100%;
+  left: 0;
 }
 
 .header-contact-list {
@@ -257,7 +323,7 @@ ul {
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
-  transition: opacity var(--main-transition-settings);
+  transition: opacity var(--main-transition-settings), visibility var(--main-transition-settings);
 }
 
 .backdrop--is-hidden {
@@ -274,7 +340,7 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1.2);
+  transform: translate(-50%, -50%) scale(1.1);
   background-color: #ffffff;
   min-width: 528px;
   min-height: 581px;
@@ -386,6 +452,7 @@ ul {
 .about__item {
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .about__item:not(:last-child) {
@@ -397,12 +464,12 @@ ul {
   bottom: -50px;
   left: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
+  flex-direction: column;
   background-color: rgba(47, 48, 58, 0.8);
   width: 370px;
   height: 120px;
-  transition: transform var(--main-transition-settings);
+  transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .about__list--title {
@@ -411,12 +478,27 @@ ul {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--white-text-color);
-  margin-bottom: 50px;
+  margin-top: 30px;
+}
+
+.about__list--text {
+  font-size: 14px;
+  line-height: 1.04;
+  color: var(--white-text-color);
+  padding: 15px 20px;
+  opacity: 0;
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
 }
 
 .about__item:hover .about-list--tumb,
 .about__item:focus .about-list--tumb {
   transform: translateY(-50px);
+}
+
+.about__item:hover .about__list--text {
+  opacity: 1;
+  transition: opacity 600ms cubic-bezier(0.4, 0, 0.2, 1) 400ms;
 }
 
 /* Team section */
@@ -522,7 +604,7 @@ ul {
 }
 
 .team__card-face--back {
-  background-color: #f1f0f0;
+  background-color: rgb(241, 241, 241);
   transform: rotateY(180deg);
   padding: 15px;
 }
@@ -545,6 +627,7 @@ ul {
 .team__scene:hover .team__card,
 .team__scene:hover .team__card {
   transform: rotateY(180deg);
+  cursor: pointer;
 }
 
 /* Clients section */
