--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,8 @@ ul {
   transition: width 0.5s, left 0.5s;
 }
 
-.hover-effect__link:hover::after {
+.hover-effect__link:hover::after,
+.hover-effect__link:focus::after {
   width: 100%;
   left: 0;
 }
@@ -496,7 +497,8 @@ ul {
   transform: translateY(-50px);
 }
 
-.about__item:hover .about__list--text {
+.about__item:hover .about__list--text,
+.about__item:focus .about__list--text {
   opacity: 1;
   transition: opacity 600ms cubic-bezier(0.4, 0, 0.2, 1) 400ms;
 }
